deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: cloud-python
  labels:
    app: cloud-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-python
  template:
    metadata:
      labels:
        app: cloud-python
    spec:
      containers:
      - name: cloud-python
        image: gcr.io/url-shortener-189609/tinche/cloud-python
        ports:
        - containerPort: 8000
        command: [".venv/bin/gunicorn", "cloud.wsgi:application", "-b", "0.0.0.0"]
        readinessProbe:
          httpGet:
            path: /admin/login/
            port: 8000
        resources:
          requests:
            cpu: "50m"
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=url-shortener-189609:us-central1:cloud-python=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      - name: cloudsql
        emptyDir:
