service-static.yaml
kind: Service
apiVersion: v1
metadata:
  name: cloud-python-static
spec:
  type: NodePort
  selector:
    app: cloud-python-static
  ports:
  - protocol: TCP
    port: 80
