service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cloud-python
spec:
  type: NodePort
  selector:
    app: cloud-python
  ports:
  - protocol: TCP
    port: 8000
